[package]
name = "mcp-server-agent-browser"
version = "0.1.0"
edition = "2024"
description = "MCP server providing browser automation via Vercel's agent-browser CLI"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"

[profile.release]
lto = true
strip = true
